# Painkiller

./: .coveragerc  .gitignore  README.md  poetry.toml  pyproject.toml  pytest.ini
.docker/: docker-compose.yml
.docker/coverage/: Dockerfile
.docker/measurement/: Dockerfile
.docker/patient/: Dockerfile
apps/clients/measurement/: actions.py  builder.py  client.py  models.py
apps/clients/measurement/engine/: abstract.py  http.py
apps/clients/patient/: actions.py  bases.py  builder.py  client.py  models.py  schema.prisma
apps/clients/patient/engine/: query.py
apps/measurement/core/: main.py
apps/measurement/databases/: prisma_orm.py
apps/measurement/interfaces/: app.py
apps/measurement/models/: measurement_model.py
apps/measurement/prisma/: schema.prisma
apps/measurement/routers/v1/: measurement_router.py
apps/measurement/schemas/pydantic/: measurement_schema.py
apps/measurement/services/: measurement_service.py
apps/patient/core/: main.py
apps/patient/database/: prisma_orm.py
apps/patient/databases/: prisma_orm.py
apps/patient/interfaces/: app.py
apps/patient/routers/v1/: patient_router.py  patients_router.py
apps/patient/schemas/pydantic/: patient.py
apps/patient/services/: patient.py
apps/patients/core/: main.py
apps/patients/database/: prisma_orm.py
apps/patients/interfaces/: app.py
apps/patients/models/: patient.py
apps/patients/prisma/: schema.prisma
apps/patients/routers/v1/: PatientsRouter.py  patients_router.py
apps/patients/schemas/pydantic/: PatientSchema.py  patient.py
apps/patients/services/: patient.py
apps/patients/utils/: uuid.py
scripts/: applications.py  coverage.sh  prisma.py  run_measurement.sh  run_patient.sh
src/apps/measurement/core/: main.py
src/apps/measurement/databases/: prisma_orm.py
src/apps/measurement/interfaces/: app.py
src/apps/measurement/models/: measurement_model.py
src/apps/measurement/schemas/: measurement_schema.py
src/clients/measurement/: bases.py  client.py  schema.prisma  types.py
src/clients/patient/: client.py  types.py
src/utils/: test_uuid.py
(+19 files in other folders)
