[tool.poetry]
name = "Painkiller"
version = "v0.0.1"
description = "A BackEnd Software Engineer challenger for a job position at A3Data"
authors = ["Garuso Cruz <garusotec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"