[tool.poetry]
name = "Painkiller"
version = "v0.0.1"
description = "A BackEnd Software Engineer challenger for a job position at A3Data"
authors = ["Garuso Cruz <garusotec@gmail.com>"]

packages = [
    { include = "scripts/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
prisma = "^0.9.1"
uvicorn = "^0.23.1"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
ipdb = "^0.13.13"
coverage = "^7.2.7"
pytest = "^7.4.0"

[tool.poetry.scripts]
coverage = "scripts.applications:coverage"
docker_up = "scripts.applications:docker_up"
client_measurement = "scripts.prisma:client_measurement"
migrate_measurement = "scripts.prisma:migrate_measurement"
patient = "scripts.applications:patient_api"
client_patient = "scripts.prisma:client_patient"
migrate_patient = "scripts.prisma:migrate_patient"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"